# pretty-ical

./: README.md  pyproject.toml
pretty_ical/: prettify.py
