[tool.poetry]
name = "pretty-ical"
version = "0.1.0"
description = ""
authors = ["Rasha Moumneh <rasha@fastmailteam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
termcolor = "^2.4.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
